--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -374,12 +374,399 @@ body {
 
 .grid_img {
 	display: grid;
-	grid-template-columns: repeat(3, 3fr);
-	grid-template-rows: repeat(3, 3fr);
-	gap: 4.5%;
+	gap: 49px 41px;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+
+}
+
+.grid_item {
+	width: 100%;
+	height: 100%;
 }
 
 .grid_item:nth-child(3),
 .grid_item:nth-child(4) {
 	grid-row: span 2;
+}
+
+
+@media screen and (max-width: 1200px) {
+	.container {
+		max-width: 1040px;
+		margin: 0 auto;
+		padding: 24px 0 60px;
+	}
+
+	.header_inner_image {
+		position: relative;
+		margin: 0 auto;
+	}
+
+	.header_inner_img {
+		position: absolute;
+		bottom: -410px;
+		right: 10px;
+		max-width: 690px;
+	}
+
+	.header_inner-btn {
+		margin: 42px 0 40px;
+	}
+
+	.button_blue-inner {
+		margin-right: 8px;
+	}
+
+	.info_title {
+		margin-bottom: 26px;
+	}
+
+	.info_text {
+		margin-bottom: 26px;
+	}
+
+	.inbox {
+		padding: 90px 0 70px;
+	}
+
+	.container-image {
+		position: relative;
+	}
+
+	.container-image_communicate {
+		position: absolute;
+		bottom: 20px;
+	}
+
+	.communicate_footer {
+		margin: 110px 0 95px;
+	}
+
+	.communicate_block {
+		max-width: 330px;
+	}
+
+	.info_pretitle-black {
+		margin: 85px auto 19px;
+		text-align: center;
+	}
+
+	.choice_img {
+		grid-template-columns: repeat(4, 245px);
+		gap: 20px;
+	}
+
+	.grid {
+		margin-top: 50px;
+	}
+
+	.grid_text {
+		margin: 0 auto 75px;
+	}
+
+	.grid_img {
+		gap: 40px 35px;
+	}
+}
+
+@media screen and (max-width: 1090px) {
+	.container {
+		max-width: 750px;
+		margin: 0 auto;
+		padding: 25px 0 25px;
+	}
+
+	.logo_title {
+		margin-left: 17px;
+		font-size: 20px;
+		line-height: 25px;
+	}
+
+	.logo_text {
+		display: none;
+	}
+
+	.header_nav {
+		display: none;
+	}
+
+	.header_inner_title {
+		position: relative;
+		max-width: 525px;
+		font-size: 60px;
+		font-weight: 700;
+		line-height: 72px;
+	}
+
+	.header_inner_text {
+		position: relative;
+		max-width: 355px;
+		margin-top: 24px;
+		font-size: 20px;
+		line-height: 26px;
+	}
+
+	.button {
+		width: 124px;
+		height: 50px;
+		font-size: 16px;
+		line-height: 13px;
+		margin-bottom: 290px;
+	}
+
+	.header_inner_image {
+		position: relative;
+	}
+
+	.header_inner_img {
+		position: absolute;
+		max-width: 620px;
+		top: 365px;
+		right: 215px;
+	}
+
+	.header_footer-left {
+		width: 432px;
+		margin-top: 30px;
+		padding-left: 100px;
+
+	}
+
+	.header_footer-right {
+		width: 432px;
+		margin-top: 33px;
+		margin-bottom: 34px;
+		padding-left: 100px;
+	}
+
+	.flex_column {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.container_icon {
+		max-width: 620px;
+		margin: 0 auto;
+	}
+
+	.grid_section_icon {
+		display: grid;
+		grid-template-columns: 3, 1fr;
+		grid-template-rows: 2, 1fr;
+		gap: 40px 40px;
+		grid-template-areas:
+			"a b c"
+			"d e f";
+	}
+
+	.section_icon-img1 {
+		grid-area: a;
+		padding-left: 20px;
+	}
+
+	.section_icon-img2 {
+		grid-area: b;
+	}
+
+	.section_icon-img3 {
+		grid-area: c;
+		padding-left: 35px;
+	}
+
+	.section_icon-img4 {
+		grid-area: d;
+	}
+
+	.section_icon-img5 {
+		grid-area: e;
+		padding-left: 15px;
+	}
+
+	.section_icon-img6 {
+		grid-area: f;
+	}
+
+	.flex_column-rev {
+		flex-direction: column-reverse;
+	}
+
+	.inbox {
+		padding: 0;
+	}
+
+	.info_pretitle {
+		margin: 56px auto 15px;
+		font-size: 22px;
+		line-height: 34px;
+		text-align: center;
+	}
+
+	.info_title {
+		margin: 0 auto;
+		max-width: 462px;
+		font-size: 48px;
+		line-height: 52px;
+		text-align: center;
+	}
+
+	.info_text {
+		max-width: 429px;
+		font-size: 20px;
+		line-height: 26px;
+		margin: 24px auto 41px;
+		text-align: center;
+	}
+
+	.inbox_response {
+		margin-bottom: 76px;
+	}
+
+	.button_blue-communicate {
+		display: block;
+		margin: 0 auto 37px;
+	}
+
+	.container-image {
+		position: relative;
+	}
+
+	.container-image_communicate {
+		position: absolute;
+		bottom: -450px;
+	}
+
+	.communicate_footer {
+		margin: 129px 0 0;
+	}
+
+	.communicate_block {
+		max-width: 360px;
+	}
+
+	.communicate_block2,
+	.communicate_block3 {
+		display: none;
+	}
+
+	.communicate_block {
+		margin: 400px auto 0;
+	}
+
+	.communicate_text {
+		max-width: 322px;
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	.communicate_text-link {
+		display: block;
+		text-align: center;
+		margin: 5px auto 38px;
+	}
+
+	.info_pretitle-black {
+		margin: 50px auto 27px;
+	}
+
+	.info_text-choice {
+		max-width: 466px;
+		margin: 27px auto 27px;
+	}
+
+	.choice_button {
+		margin-bottom: 52px;
+	}
+
+	.button_blue-choice {
+		margin: 0 8px 0 auto;
+		display: inline-block;
+		text-align: center;
+
+	}
+
+	.button_white-choice {
+		display: inline-block;
+		margin: 0 auto 0 0;
+		text-align: center;
+
+	}
+
+
+	.choice_img {
+		display: grid;
+		gap: 38px 64px;
+		grid-template-columns: repeat(2, 262px);
+		grid-template-rows: repeat(2, 300px);
+		grid-template-areas:
+			"a b"
+			"c d";
+		justify-content: center;
+	}
+
+	.choice-image1-grid {
+		grid-area: a;
+	}
+
+	.choice-image2-grid {
+		grid-area: b;
+	}
+
+	.choice-image3-grid {
+		grid-area: c;
+	}
+
+	.choice-image4-grid {
+		grid-area: d;
+	}
+
+	.grid_title {
+		margin: 43px auto 26px;
+		font-size: 48px;
+		line-height: 56px;
+	}
+
+	.grid_text {
+		max-width: 399px;
+		margin: 0 auto 114px;
+		font-size: 20px;
+	}
+
+	.grid_img {
+		display: grid;
+		gap: 29px 45px;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+
+	}
+
+	.grid_item {
+		width: 100%;
+		height: 100%;
+	}
+
+	.grid_item:nth-child(3) {
+		grid-column: 2/3;
+		grid-row: 1/3;
+	}
+
+	.grid_item:nth-child(2) {
+		grid-column: 2/3;
+		grid-row: 4/5;
+	}
+
+	.grid_item:nth-child(7) {
+		display: none;
+	}
+
+}
+
+@media screen and (max-width: 800px) {
+	.container {
+		max-width: 500px;
+	}
+
+
+
 }
