--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -39,8 +39,6 @@ body {
 	color: rgba(43, 41, 45, 0.6);
 }
 
-
-
 .header_li:not(:last-of-type) {
 	margin-right: 50px;
 }
@@ -765,8 +763,557 @@ body {
 @media screen and (max-width: 800px) {
 	.container {
 		max-width: 500px;
+		padding: 22px 0 25px;
+	}
+
+	.header_img {
+		width: 50px;
+		height: 50px;
+	}
+
+	.logo_title {
+		font-size: 18px;
+		line-height: 35px;
+	}
+
+	.logo_text {
+		font-size: 16px;
+		line-height: 35px;
+	}
+
+	.header_inner_image {
+		position: relative;
+	}
+
+	.header_inner_img {
+		position: absolute;
+		top: 258px;
+		right: 145px;
+		max-width: 450px;
+	}
+
+	.header_inner_title {
+		max-width: 450px;
+		font-size: 50px;
+		line-height: 40px;
+	}
+
+	.header_inner_text {
+		max-width: 350px;
+		margin-top: 17px;
+		font-size: 20px;
+		line-height: 22px;
+	}
+
+	.header_inner-btn {
+		margin-top: 30px;
+	}
+
+	.button {
+		width: 115px;
+		height: 40px;
+		font-size: 14px;
+		line-height: 13px;
+		margin-bottom: 195px;
+	}
+
+	.header_footer-left {
+		width: 355px;
+
+	}
+
+	.header_footer-right {
+		width: 355px;
+	}
+
+	.header_footer_title {
+		font-size: 20px;
+		line-height: 28px;
+	}
+
+	.header_footer_text {
+		font-size: 20px;
+		line-height: 28px;
+	}
+
+	.section_icon-img1 {
+		padding-left: 15px;
+	}
+
+	.section_icon-img3 {
+		padding-left: 35px;
+	}
+
+	.section_icon-img5 {
+		padding-left: 10px;
+	}
+
+	.info_pretitle {
+		margin: 24px auto 10px;
+		font-size: 20px;
+	}
+
+	.info_title {
+		max-width: 450px;
+		font-size: 45px;
+	}
+
+	.info_text {
+		max-width: 430px;
+		font-size: 22px;
+		margin: 24px auto 41px;
+		margin-bottom: 40px;
+	}
+
+	.inbox_response {
+		max-width: 490px;
+		margin-bottom: 76px;
+	}
+
+	.button_blue-communicate {
+		margin: 0 auto 25px;
+	}
+
+	.communicate_footer {
+		margin: 129px 0 0;
+	}
+
+	.communicate_text {
+		max-width: 322px;
+		font-size: 18px;
+	}
+
+	.communicate_text-link {
+		margin: 5px auto 38px;
+	}
+
+	.choice_button {
+		height: 60px;
+		margin-bottom: 30px;
+	}
+
+	.choice_img {
+		margin-bottom: 40px;
+	}
+
+	.grid_title {
+		margin-bottom: 35px;
+	}
+
+	.grid_text {
+		margin-bottom: 60px;
+	}
+}
+
+@media screen and (max-width: 550px) {
+	.container {
+		max-width: 450px;
+	}
+
+	.header_inner_img {
+		top: 258px;
+		right: 70px;
+		max-width: 430px;
 	}
 
 
+	.header_footer-left {
+		width: 300px;
+		padding: 0;
+		margin: 0 auto 25px;
+
+	}
+
+	.header_footer-right {
+		width: 300px;
+		padding: 0;
+		margin: 0 auto;
+	}
+
+	.grid_section_icon {
+		gap: 20px 15px;
+	}
+
+	.grid_title {
+		margin-bottom: 27px;
+	}
+
+	.grid_text {
+		margin-bottom: 60px;
+	}
+
+	.choice_img {
+		display: grid;
+		grid-template-columns: repeat(1, 262px);
+		grid-template-rows: repeat(4, 300px);
+		gap: 30px;
+		grid-template-areas:
+			"a"
+			"b"
+			"c"
+			"d";
+	}
+
+	.grid_img {
+		display: grid;
+		gap: 30px;
+
+	}
+
+}
+
+@media screen and (max-width: 480px) {
+	.container {
+		max-width: 320px;
+		padding: 15px 0 15px;
+	}
+
+	.logo_title {
+		font-size: 18px;
+		margin-left: 10px;
+	}
+
+	.header_inner_img {
+		top: 332px;
+		right: 80px;
+		max-width: 320px;
+	}
+
+
+	.header_footer-left {
+		width: 320px;
+		padding: 0;
+		margin: 0 auto 25px;
+		font-size: 16px;
+
+	}
+
+	.header_footer-right {
+		width: 320px;
+		padding: 0;
+		margin: 0 auto;
+		font-size: 16px;
+	}
+
+	.grid_section_icon {
+		grid-template-columns: repeat(3, 100px);
+		grid-template-rows: repeat(2, 94px);
+		gap: 5px 5px;
+	}
+
+	.section_icon-img1 {
+		max-width: 90px;
+		padding: 0 7px 0 7px;
+	}
+
+	.section_icon-img2 {
+		max-width: 90px;
+		padding: 0 5px 0 5px;
+	}
+
+	.section_icon-img3 {
+		max-width: 90px;
+		padding: 0 15px 0 30px;
+	}
+
+	.section_icon-img4 {
+		max-width: 100px;
+	}
+
+	.section_icon-img5 {
+		max-width: 90px;
+	}
+
+	.section_icon-img6 {
+		max-width: 90px;
+		padding-left: 5px;
+	}
+
+	.flex_column-rev {
+		flex-direction: column;
+	}
+
+	.container-image_communicate {
+		max-width: 300px;
+		bottom: -300px;
+	}
+
+	.communicate_block1 {
+		margin-top: 200px;
+	}
+
+
+	.grid_title {
+		margin-bottom: 27px;
+	}
+
+	.grid_text {
+		margin-bottom: 60px;
+	}
+
+
+	.grid_img {
+		display: grid;
+		gap: 20px;
+
+	}
+
+}
+
+@media screen and (max-width: 320px) {
+	.container {
+		max-width: 300px;
+		padding: 20px 0 19px;
+	}
+
+	.header_header {
+		background-color: #FFFFFF;
+	}
+
+	.logo_title {
+		font-size: 20px;
+		margin-left: 13px;
+	}
+
+	.header_inner_title {
+		font-size: 50px;
+		line-height: 50px;
+		margin-bottom: 24px;
+	}
+
+	.header_inner_text {
+		font-size: 24px;
+		line-height: 34px;
+		margin-bottom: 30px;
+	}
+
+	.button {
+		width: 290px;
+		font-size: 18px;
+		line-height: 13px;
+	}
+
+	.button_blue {
+		display: block;
+		margin: 0 auto;
+	}
+
+	.button_white-inner {
+		display: block;
+		margin: 15px auto 240px;
+
+	}
+
+	.header_inner_img {
+		top: 550px;
+		right: 15px;
+		max-width: 290px;
+	}
+
+
+	.header_footer-left {
+		width: 290px;
+		padding: 0;
+		margin: 46px auto 20px;
+		font-size: 22px;
+		line-height: 32px;
+	}
+
+	.header_footer-right {
+		width: 290px;
+		padding: 0;
+		margin: 0 auto 46px;
+		font-size: 22px;
+		line-height: 32px;
+	}
+
+	.grid_section_icon {
+		grid-template-columns: repeat(3, 100px);
+		grid-template-rows: repeat(2, 94px);
+		gap: 5px 5px;
+	}
+
+	.section_icon-img1 {
+		max-width: 90px;
+		padding: 0 7px 0 7px;
+	}
+
+	.section_icon-img2 {
+		max-width: 90px;
+		padding: 0 5px 0 5px;
+	}
+
+	.section_icon-img3 {
+		max-width: 90px;
+		padding: 0 15px 0 30px;
+	}
+
+	.section_icon-img4 {
+		max-width: 100px;
+	}
+
+	.section_icon-img5 {
+		max-width: 90px;
+	}
+
+	.section_icon-img6 {
+		max-width: 90px;
+		padding-left: 5px;
+	}
+
+	.flex_column-rev {
+		flex-direction: column;
+	}
+
+	.container-image {
+		width: 290px;
+		height: 348px;
+	}
+
+	.container-image_img {
+		width: 100%;
+		height: 100%;
+		margin-bottom: 32px;
+	}
+
+	.info_pretitle-orange {
+		text-align: start;
+		font-size: 22px;
+		line-height: 34px;
+		margin-bottom: 17px;
+	}
+
+	.info_title {
+		text-align: start;
+		font-size: 40px;
+		line-height: 40px;
+		margin-bottom: 18px;
+	}
+
+	.info_text {
+		text-align: start;
+		max-width: 290px;
+		font-size: 24px;
+		line-height: 34px;
+		margin-bottom: 30px;
+	}
+
+	.inbox_position {
+		margin-bottom: 48px;
+	}
+
+	.info_pretitle-blue {
+		margin: 53px 0 17px;
+		text-align: start;
+	}
+
+
+	.container-image_communicate {
+		max-width: 290px;
+		bottom: 10px;
+	}
+
+	.communicate_footer {
+		margin: 0 auto;
+		display: block;
+	}
+
+	.communicate_block1 {
+		margin-top: 113px;
+	}
+
+	.communicate_block2 {
+		display: block;
+		margin: 0 auto;
+	}
+
+	.communicate_block3 {
+		display: block;
+		margin: 0 auto;
+	}
+
+	.communicate_text {
+		max-width: 290px;
+		text-align: start;
+	}
+
+	.communicate_text-link {
+		text-align: start;
+	}
+
+	.info_pretitle-black {
+		margin: 50px 0 17px;
+	}
+
+	.info_title-choice {
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	.info_text-choice {
+		margin: 17px 0 30px;
+		text-align: center;
+	}
+
+	.button_blue-choice {
+		display: block;
+		margin: 0 auto;
+	}
+
+	.button_white-choice {
+		display: block;
+		margin: 0 auto;
+	}
+
+	.grid_title {
+		margin-top: 78px;
+		font-size: 40px;
+		line-height: 47px;
+	}
+
+	.grid_text {
+		margin: 24px 0 25px;
+		font-size: 24px;
+		line-height: 34px;
+	}
+
+
+	.grid_img {
+		display: grid;
+		gap: 20px;
+		grid-template-columns: 1, 290px;
+		grid-template-rows: 7, 170px;
+	}
+
+
+	.grid_item:nth-child(1) {
+		grid-column: 1/3;
+		grid-row: 1/2;
+	}
+
+	.grid_item:nth-child(3) {
+		grid-column: 1/3;
+		grid-row: 4/6;
+	}
+
+	.grid_item:nth-child(4) {
+		grid-column: 1/3;
+		grid-row: 2/4;
+	}
+
+	.grid_item:nth-child(5) {
+		grid-column: 1/3;
+		grid-row: 6/7;
+	}
+
+	.grid_item:nth-child(6) {
+		grid-column: 1/3;
+		grid-row: 7/8;
+	}
+
+	.grid_item:nth-child(2),
+	.grid_item:nth-child(7) {
+		display: none;
+	}
 
 }
