--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -2,10 +2,6 @@ body {
 	font-family: 'Work Sans', sans-serif;
 }
 
-.header {
-	background-color: #F3C6BD;
-}
-
 .container {
 	width: 1140px;
 	margin: 0 auto;
@@ -25,6 +21,14 @@ body {
 .flex_end {
 	justify-content: end;
 }
+
+
+/*Header**************************************/
+
+.header {
+	background-color: #F3C6BD;
+}
+
 
 .logo_title {
 	font-weight: 700;
@@ -99,6 +103,8 @@ body {
 	transition: 100ms;
 }
 
+/*Header_inner**************************************/
+
 .header_inner {
 	background-color: #F3C6BD;
 	position: relative;
@@ -117,7 +123,6 @@ body {
 
 .header_inner_title {
 	margin: o auto;
-	position: relative;
 	max-width: 754px;
 	font-size: 80px;
 	font-weight: 700;
@@ -143,11 +148,23 @@ body {
 	margin-right: 8px;
 }
 
+.button_blue-inner:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #1329f5;
+	transition: 100ms;
+}
+
 .button_white {
 	background: #FFFFFF;
 	color: #3040C4;
 }
 
+.button_white-inner:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #e3e3e7;
+	transition: 100ms;
+}
+
+
+/*header_footer*************************************/
 
 .header_footer {
 	margin: 0 auto;
@@ -178,7 +195,7 @@ body {
 	color: #2B292D;
 }
 
-/* Features */
+/* Features *************************************/
 .info_pretitle-green {
 	color: #009B4D;
 }
@@ -209,6 +226,7 @@ body {
 	right: 0;
 }
 
+
 .features_icon {
 	width: 24px;
 	height: 24px;
@@ -223,9 +241,12 @@ body {
 
 .features_text {
 	display: none;
+	margin: 10px;
+
 	max-width: 459px;
 	font-size: 18px;
 	line-height: 26px;
+	border-bottom: 3px solid #3142C6;
 }
 
 .features_container {
@@ -246,6 +267,7 @@ body {
 }
 
 
+/*Inbox**************************************/
 
 .inbox {
 	background-color: rgba(252, 240, 227, 0.4);
@@ -361,7 +383,40 @@ body {
 	margin-top: 39px;
 }
 
+.container-img_communicate {
+	position: relative;
+	animation-name: communicate;
+	animation-duration: 1s;
+	animation-timing-function: ease-in;
+	animation-delay: 100ms;
+	animation-direction: alternate-reverse;
+	animation-iteration-count: infinite;
+}
 
+
+@keyframes communicate {
+	0% {
+
+		right: 10px;
+	}
+
+	25% {
+
+		right: 15px;
+	}
+
+	75% {
+
+		right: 10px;
+	}
+
+	100% {
+		right: 5px;
+	}
+
+}
+
+/*Communicate_footer**************************************/
 .communicate_footer {
 	margin: 129px 0 124px;
 }
@@ -383,6 +438,11 @@ body {
 .communicate_text-link {
 	color: rgba(48, 64, 196, 1);
 	font-weight: 700;
+}
+
+.button_blue-communicate:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #0606fa;
+	transition: 100ms;
 }
 
 .choice_bg {
@@ -416,6 +476,16 @@ body {
 .button_blue-choice {
 	margin: 0 8px 111px 0;
 
+}
+
+.button_about:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #0606fa;
+	transition: 100ms;
+}
+
+.button_white-choice:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #e3e3e6;
+	transition: 100ms;
 }
 
 
@@ -494,6 +564,9 @@ body {
 	grid-row: span 2;
 }
 
+
+
+
 /* Input без адаптации */
 
 .flex_center {
@@ -514,7 +587,7 @@ body {
 	animation-timing-function: ease-in;
 	animation-delay: 100ms;
 	animation-direction: alternate-reverse;
-	animation-iteration-count: 2;
+	animation-iteration-count: infinite;
 
 }
 
@@ -588,6 +661,11 @@ body {
 
 .button_blue-input {
 	margin: 0;
+}
+
+.button_blue-input:hover {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 1e-05) 100%), #0606fa;
+	transition: 100ms;
 }
 
 .input_label {
@@ -682,12 +760,20 @@ body {
 	font-weight: 700;
 }
 
+.about_left {
+	margin-right: 10px;
+}
+
 .about-text {
 	margin-top: 3px;
 	max-width: 410px;
 	font-size: 18px;
 	line-height: 26px;
 	display: none;
+}
+
+.about-icon {
+	margin-left: 20px;
 }
 
 .about-rotate-icon {
@@ -841,6 +927,19 @@ body {
 		margin-right: 8px;
 	}
 
+	.features {
+		padding-bottom: 20px;
+	}
+
+	.flex_column-adap {
+		flex-direction: column;
+	}
+
+	.features_image-img {
+		position: static;
+		margin-top: 49px;
+	}
+
 	.info_title {
 		margin-bottom: 26px;
 	}
@@ -853,17 +952,8 @@ body {
 		padding: 90px 0 70px;
 	}
 
-	.container-image {
-		position: relative;
-	}
-
-	.container-image_communicate {
-		position: absolute;
-		bottom: 20px;
-	}
-
 	.communicate_footer {
-		margin: 110px 0 95px;
+		margin: 110px 0 50px;
 	}
 
 	.communicate_block {
@@ -931,7 +1021,7 @@ body {
 		top: 0;
 		right: 0;
 		opacity: 0;
-		z-index: 3;
+		z-index: 6;
 	}
 
 	.header_nav-checkbox:checked~.header_check-wrapper>.header_nav-check:first-of-type {
@@ -959,7 +1049,7 @@ body {
 		right: 0;
 		text-align: center;
 		padding-top: 40px;
-		z-index: 4;
+		z-index: 2;
 	}
 
 	.header_li {
@@ -969,36 +1059,54 @@ body {
 
 	.header_check-wrapper {
 		position: relative;
-		z-index: 2;
+		z-index: 5;
 	}
 
+	.button_blue-header {
+		margin: 0;
+	}
 
+	.header_inner-btn {
+		margin: 20px auto 5px;
+	}
 
 	.header_inner-container {
 		flex-direction: column;
 	}
 
+	.flex_column-line {
+		flex-direction: column;
+		justify-content: start;
+		align-items: start;
+	}
+
 	.header_inner-container>div:last-of-type {
 		z-index: 0;
-		position: static;
-		margin-right: 25px;
+		position: relative;
+		margin-left: 120px;
+
+	}
+
+	.header_inner_img {
+		width: 620px;
+		height: 349px;
 	}
 
 	.header_inner_title {
-		position: relative;
 		max-width: 525px;
 		font-size: 60px;
 		font-weight: 700;
 		line-height: 72px;
+		text-align: start;
 	}
 
 	.header_inner_text {
-		position: relative;
 		max-width: 355px;
 		margin-top: 24px;
 		font-size: 20px;
 		line-height: 26px;
 	}
+
 
 	.button {
 		width: 124px;
@@ -1067,6 +1175,15 @@ body {
 
 	.section_icon-img6 {
 		grid-area: f;
+	}
+
+	.flex_column-adap {
+		flex-direction: column;
+	}
+
+	.features_image-img {
+		position: static;
+		margin-top: 49px;
 	}
 
 	.flex_column-rev {
@@ -1202,6 +1319,19 @@ body {
 		grid-area: d;
 	}
 
+
+	.about {
+		padding: 87px 0 0;
+	}
+
+	.button_about-adap {
+		width: 247px;
+	}
+
+	.grid {
+		padding: 43px 0 124px;
+	}
+
 	.grid_title {
 		margin: 43px auto 26px;
 		font-size: 48px;
@@ -1241,6 +1371,93 @@ body {
 		display: none;
 	}
 
+
+
+	.input {
+		padding: 74px 0 62px;
+	}
+
+	.input_image {
+		margin: 14px auto 0;
+	}
+
+	.input_title {
+		margin: 0 auto 51px;
+		max-width: 325px;
+		font-size: 48px;
+		text-align: center;
+	}
+
+	.input_text {
+		max-width: 590px;
+		margin: 0 auto 35px;
+		text-align: center;
+	}
+
+	.input_input {
+		margin: 0;
+	}
+
+	.input_email {
+		width: 290px;
+		height: 47px;
+		padding: 0;
+		margin-top: 2px;
+		box-sizing: border-box;
+	}
+
+
+	.button_blue-input {
+		width: 290px;
+		height: 47px;
+		margin: 0;
+		border-radius: 3px;
+	}
+
+	.checkbox-text {
+		font-size: 14px;
+		text-align: center;
+	}
+
+	.logo-footer {
+		margin-top: 49px;
+	}
+
+	.logo_title-footer {
+		margin: 32px auto 2px;
+		text-align: center;
+	}
+
+	.logo_text-footer {
+		font-size: 18px;
+		line-height: 25px;
+		color: rgba(43, 41, 45, 0.6);
+	}
+
+	.footer_main {
+		display: none;
+	}
+
+	.footer_img {
+		margin-top: 33px;
+	}
+
+	.footer_img-app {
+		margin-right: 46px;
+	}
+
+
+	.footer_product-left {
+		margin: 33px auto;
+	}
+
+	.footer_line {
+		display: none;
+	}
+
+	.footer_end-icon {
+		margin-top: 29px;
+	}
 }
 
 @media screen and (max-width: 800px) {
@@ -1249,10 +1466,6 @@ body {
 		padding: 22px 0 25px;
 	}
 
-	.header_img {
-		width: 50px;
-		height: 50px;
-	}
 
 	.logo_title {
 		font-size: 18px;
@@ -1268,11 +1481,17 @@ body {
 		position: relative;
 	}
 
+	.header_inner-container>div:last-of-type {
+		z-index: 0;
+		position: relative;
+		margin-left: 90px;
+
+	}
+
 	.header_inner_img {
-		position: absolute;
-		top: 258px;
-		right: 145px;
-		max-width: 450px;
+		width: 450px;
+		height: 250px;
+
 	}
 
 	.header_inner_title {
@@ -1297,7 +1516,7 @@ body {
 		height: 40px;
 		font-size: 14px;
 		line-height: 13px;
-		margin-bottom: 195px;
+		margin-bottom: 10px;
 	}
 
 	.header_footer-left {
@@ -1379,6 +1598,34 @@ body {
 		margin-bottom: 40px;
 	}
 
+	.button_about {
+		width: 247px;
+		height: 48px;
+		margin: 0 auto;
+
+	}
+
+	.input_title {
+		margin: 0 auto 41px;
+		max-width: 325px;
+		font-size: 48px;
+		line-height: 52px;
+	}
+
+	.input_text {
+		max-width: 490px;
+		margin: 0 auto 25px;
+	}
+
+	.input_email {
+		width: 240px;
+	}
+
+
+	.button_blue-input {
+		width: 240px;
+	}
+
 	.grid_title {
 		margin-bottom: 35px;
 	}
@@ -1393,24 +1640,64 @@ body {
 		max-width: 450px;
 	}
 
-	.header_inner_img {
-		top: 258px;
-		right: 70px;
-		max-width: 430px;
+	.header_inner-container>div:last-of-type {
+		margin-left: 60px;
 	}
 
+	.header_inner_img {
+		width: 350px;
+		height: 190px;
+
+	}
+
+	.header_inner_title {
+		max-width: 350px;
+		font-size: 40px;
+	}
+
+	.header_inner_text {
+		max-width: 320px;
+	}
 
 	.header_footer-left {
 		width: 300px;
 		padding: 0;
 		margin: 0 auto 25px;
-
 	}
 
 	.header_footer-right {
 		width: 300px;
 		padding: 0;
 		margin: 0 auto;
+	}
+
+	.features_icon-image {
+		width: 50px;
+		height: 100px;
+	}
+
+	.features_image-img {
+		width: 450px;
+		height: 320px;
+	}
+
+	.about_text-title {
+		font-size: 48px;
+		line-height: 50px;
+	}
+
+	.about_text-text {
+		max-width: 455px;
+		font-size: 22px;
+		line-height: 30px;
+	}
+
+	.about_pretitle {
+		font-size: 20px;
+	}
+
+	.about-text {
+		font-size: 16px;
 	}
 
 	.grid_section_icon {
@@ -1443,6 +1730,27 @@ body {
 
 	}
 
+	.input_title {
+		max-width: 350px;
+		margin-bottom: 20px;
+	}
+
+	.input_text {
+		max-width: 405px;
+		font-size: 20px;
+	}
+
+	.input_email {
+		width: 210px;
+		height: 38px;
+	}
+
+	.button_blue-input {
+		width: 210px;
+		height: 38px;
+		margin: 0;
+	}
+
 }
 
 @media screen and (max-width: 480px) {
@@ -1454,12 +1762,6 @@ body {
 	.logo_title {
 		font-size: 18px;
 		margin-left: 10px;
-	}
-
-	.header_inner_img {
-		top: 332px;
-		right: 80px;
-		max-width: 320px;
 	}
 
 
@@ -1477,6 +1779,45 @@ body {
 		margin: 0 auto;
 		font-size: 16px;
 	}
+
+
+	.info_title {
+		font-size: 40px;
+	}
+
+	.info_text-features {
+		font-size: 20px;
+	}
+
+	.features {
+		padding-bottom: 70px;
+	}
+
+
+	.features_pretitle {
+		font-size: 20px;
+	}
+
+	.features_text {
+		max-width: 300px;
+	}
+
+	.features_container {
+		width: 300px;
+	}
+
+	.about_text-title {
+		font-size: 40px;
+	}
+
+	.about_text-text {
+		font-size: 22px;
+	}
+
+	.flex_column-rev {
+		flex-direction: column-reverse;
+	}
+
 
 	.grid_section_icon {
 		grid-template-columns: repeat(3, 100px);
@@ -1541,6 +1882,52 @@ body {
 
 	}
 
+	.input_title {
+		width: 280px;
+		font-size: 40px;
+	}
+
+	.input_text {
+		width: 300px;
+		font-size: 20px;
+	}
+
+	.input_email {
+		width: 150px;
+	}
+
+	.button_blue-input {
+		width: 150px;
+	}
+
+	.footer_text {
+		font-size: 16px;
+	}
+
+	.logo-footer {
+		width: 48px;
+		height: 48px;
+		margin-top: 40px;
+	}
+
+	.footer_main {
+		max-width: 300px;
+		text-align: start;
+		margin: 26px 0 25px;
+	}
+
+	.logo_title-footer {
+		margin-top: 15px;
+	}
+
+	.footer_product-title {
+		font-size: 18px;
+	}
+
+	.footer_li_end {
+		margin-bottom: 25px;
+	}
+
 }
 
 @media screen and (max-width: 320px) {
@@ -1556,6 +1943,20 @@ body {
 	.logo_title {
 		font-size: 20px;
 		margin-left: 13px;
+	}
+
+
+	.header_inner-container>div:last-of-type {
+		z-index: 0;
+		position: relative;
+		margin: 5px 30px 5px;
+
+	}
+
+	.header_inner_img {
+		width: 300px;
+		height: 180px;
+
 	}
 
 	.header_inner_title {
@@ -1583,14 +1984,8 @@ body {
 
 	.button_white-inner {
 		display: block;
-		margin: 15px auto 240px;
+		margin: 15px auto;
 
-	}
-
-	.header_inner_img {
-		top: 550px;
-		right: 15px;
-		max-width: 290px;
 	}
 
 
@@ -1610,6 +2005,44 @@ body {
 		line-height: 32px;
 	}
 
+	.info_text-features {
+		margin: 30px 0 42px;
+	}
+
+
+	.features_line {
+		width: 290px;
+	}
+
+
+	.features_icon {
+		width: 24px;
+		height: 24px;
+	}
+
+	.features_pretitle {
+		font-size: 20px;
+	}
+
+	.features_text {
+		max-width: 290px;
+	}
+
+	.features_container {
+		width: 300px;
+	}
+
+	.features_icon-img {
+		display: none;
+	}
+
+	.features_image-img {
+		width: 290px;
+		height: 240px;
+	}
+
+
+
 	.grid_section_icon {
 		grid-template-columns: repeat(3, 100px);
 		grid-template-rows: repeat(2, 94px);
@@ -1617,30 +2050,30 @@ body {
 	}
 
 	.section_icon-img1 {
-		max-width: 90px;
+		max-width: 80px;
 		padding: 0 7px 0 7px;
 	}
 
 	.section_icon-img2 {
-		max-width: 90px;
+		max-width: 80px;
 		padding: 0 5px 0 5px;
 	}
 
 	.section_icon-img3 {
-		max-width: 90px;
+		max-width: 80px;
 		padding: 0 15px 0 30px;
 	}
 
 	.section_icon-img4 {
-		max-width: 100px;
+		max-width: 90px;
 	}
 
 	.section_icon-img5 {
-		max-width: 90px;
+		max-width: 80px;
 	}
 
 	.section_icon-img6 {
-		max-width: 90px;
+		max-width: 80px;
 		padding-left: 5px;
 	}
 
@@ -1799,4 +2232,29 @@ body {
 		display: none;
 	}
 
+	.input_email {
+		width: 290px;
+	}
+
+	.button_blue-input {
+		width: 290px;
+		margin: 12px 0 10px;
+	}
+
+	.input_title {
+		margin-top: 44px;
+		font-size: 48px;
+		line-height: 40px;
+		text-align: start;
+	}
+
+	.input_text {
+		font-size: 22px;
+		line-height: 32px;
+		text-align: start;
+	}
+
+	.footer_img-app {
+		margin-right: 10px;
+	}
 }
