--- a/project2/css/style.css
+++ b/project2/css/style.css
@@ -206,7 +206,7 @@ body {
 
 .features {
 	position: relative;
-	padding-bottom: 103px;
+	padding: 20px 0 53px;
 }
 
 .features_line {
@@ -222,7 +222,9 @@ body {
 
 .features_image-img {
 	position: absolute;
-	bottom: 40px;
+	width: 684px;
+	height: 591px;
+	bottom: 60px;
 	right: 0;
 }
 
@@ -274,7 +276,7 @@ body {
 
 .inbox {
 	background-color: rgba(252, 240, 227, 0.4);
-	padding: 115px 0 116px;
+	padding: 65px 0 66px;
 }
 
 .inbox_response {
@@ -370,11 +372,11 @@ body {
 	font-size: 24px;
 	line-height: 34px;
 	color: #2B292D;
-	margin-bottom: 44px;
+
 }
 
 .info_pretitle-blue {
-	margin-top: 104px;
+	margin-top: 80px;
 	color: #0189D1;
 }
 
@@ -421,7 +423,7 @@ body {
 
 /*Communicate_footer**************************************/
 .communicate_footer {
-	margin: 129px 0 124px;
+	margin: 129px 0 60px;
 }
 
 .communicate_block {
@@ -449,12 +451,12 @@ body {
 }
 
 .choice_bg {
-	padding-bottom: 110px;
+	padding-bottom: 65px;
 	background-color: rgba(0, 161, 198, 0.07);
 }
 
 .info_pretitle-black {
-	margin: 108px auto 24px;
+	margin: 63px auto 24px;
 	text-align: center;
 }
 
@@ -504,6 +506,7 @@ body {
 	border-radius: 4%;
 	grid-row-start: 1;
 	text-align: center;
+	cursor: pointer;
 }
 
 .choice_bg-card:hover {
@@ -577,7 +580,7 @@ body {
 }
 
 .input {
-	padding: 73px 0 72px;
+	padding: 50px 0 0;
 	background-color: #F4F5F7;
 
 }
@@ -663,7 +666,7 @@ body {
 }
 
 .button_blue-input {
-	margin: 0;
+	margin-left: 10px;
 }
 
 .button_blue-input:hover {
@@ -718,7 +721,7 @@ body {
 }
 
 .about {
-	padding-bottom: 90px;
+	padding: 61px 0 0;
 }
 
 .about_text-title {
@@ -792,11 +795,28 @@ body {
 }
 
 /* Footer  */
+.footer {
+	padding-top: 50px;
+}
 
+.logo_title-footer {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 25px;
+	color: #2B292D;
+}
+
+.logo_text-footer {
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	color: rgba(43, 41, 45, 0.6);
+}
 
 .footer_text {
 	font-size: 18px;
 	line-height: 26px;
+	color: rgba(43, 41, 45, 0.6);
 }
 
 
@@ -813,6 +833,12 @@ body {
 	font-weight: 700;
 	line-height: 28px;
 	color: #2B292D;
+}
+
+.footer_line {
+	width: 100%;
+	height: 1px;
+	background-color: rgba(43, 41, 45, 0.1);
 }
 
 .line_none {
@@ -856,6 +882,7 @@ body {
 .footer_text-end {
 	font-size: 14px;
 	line-height: 22px;
+	color: rgba(43, 41, 45, 0.6);
 }
 
 .footer_product-right {
